--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta name="description" content="Giorgos Kappes's academic web site"/>
 		<meta name="author" content="Giorgos Kappes"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
+		<link rel="icon" type="image/png" href="images/logo_small.png"/>
 		<title>Giorgos Kappes</title>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 	</head>
