Added primary contact email.

--- a/index.html
+++ b/index.html
@@ -459,7 +459,8 @@
 									<th> ADDRESS </th>
 								</tr>
 								<tr>
-									<td><br /><a href="mailto:gkappes@cs.uoi.gr">gkappes (at) cs.uoi.gr</a><br /></td>
+									<td><br /><a href="mailto:contact@giorgoskappes.com">contact (at) giorgoskappes.com</a><br />
+										<a href="mailto:gkappes@cs.uoi.gr">gkappes (at) cs.uoi.gr</a><br /></td>
 									<td><br />(+30) 2651008833 <br /></td>
 									<td>
 										Dep. of Computer Science and Engineering<br />
