Added new hr style for profile.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div class="logo_image_second">
 						<h1 class="profile"> Giorgos Kappes </h1>
 						<h2 class="profile"> PhD Candidate </h2>
-						<hr />
+						<hr class="profile"/>
 						<h3 class="profile"> Systems Research Group (SRG), Department of Computer Science
 									and Engineering</h3>
 						<h3 class="profile"> University of Ioannina, Greece </h3>			
