--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 		<!-- End of StatCounter Code --> 
 		
 		<!-- Start of Google Analytics Code -->
-		<script>
+		<script type="text/javascript">
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 				 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
