Added link to github pages.

--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
 			<div class="container_logo">
 			<div class="footer">
 				<p class="tiny_text"> 
-					Copyright &copy; 2013-2015 Giorgos Kappes. <br />
+				  Copyright &copy; 2013-2015 Giorgos Kappes. <br />
+				  Powered by <a href="https://pages.github.com/">GitHub Pages</a><br />
 					<script type="text/javascript">
 						document.write("This page was last modified on: " + document.lastModified +" UTC+2");
 					</script>
