--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 			<div class="footer">
 				<p class="tiny_text"> 
 				  Copyright &copy; 2013-2015 Giorgos Kappes. <br />
-				  Powered by <a href="https://pages.github.com/">GitHub Pages</a><br />
+				  Powered by <a class="footer_link" href="https://pages.github.com/">GitHub Pages</a><br />
 					<script type="text/javascript">
 						document.write("This page was last modified on: " + document.lastModified +" UTC+2");
 					</script>
