Reduced image sizes

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 			
 					<a href="http://statcounter.com">
 					<img style="border:0;width:88px;height:31px"
-						src="images/t.gif"
+						src="images/t.png"
 						alt="Stat Counter" />
 					</a>
 				</p>
