--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 								Virtualization-aware Access Control for Multitenant Filesystems, <b> IEEE 
 								International Conference on Massive Storage Systems and Technology (MSST)</b>, 
 								Santa Clara, CA, USA, June 2014.
-								(<a href="http://www.storageconference.us/2014/Papers/10.Virtualization.pdf">
-									Paper</a>,<a href="files/Kappes_msst.pdf"> Presentation
+								(<a href="http://www.storageconference.us/2014/Papers/10.Virtualization.pdf">Paper</a>,
+								<a href="files/Kappes_msst.pdf"> Presentation
 								</a>).<br />
 							</li>
 							</ul>
