--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
 								International Conference on Massive Storage Systems and Technology (MSST)</b>, 
 								Santa Clara, CA, USA, June 2014.
 								(<a href="http://www.storageconference.us/2014/Papers/10.Virtualization.pdf">Paper</a>,
-								<a href="files/Kappes_msst.pdf"> Presentation
-								</a>).<br />
+								<a href="files/Kappes_msst.pdf"> Presentation</a>).<br />
 							</li>
 							</ul>
 							<h4> Technical Reports </h4>
