--- a/index.html
+++ b/index.html
@@ -15,38 +15,34 @@
 		<!--*************************************************************************************-->
 		<!--Header Container-->
 		<!--*************************************************************************************-->	
-		<div class="container_header">
+		<div class="header">
 			<a class="anchor" id="top"></a>
-			<div class="header">
-				<h1 class="headerlogo"> &nbsp;Giorgos Kappes </h1>
-				<div class="nav">
-					<ul>
-						<li class="first"><a href="#profile" class="smoothScroll">Profile </a></li>
-						<li><a href="#research" class="smoothScroll"> Research </a></li>
-						<li><a href="#publications" class="smoothScroll"> Publications </a></li>
-						<li><a href="#memberships" class="smoothScroll"> Memberships </a></li>						
-						<li><a href="#tutorials" class="smoothScroll"> Tutorials </a></li>
-						<li><a href="#contact" class="smoothScroll"> Contact </a></li>
-					</ul>
-				</div>
+			<h1 class="headerlogo"> &nbsp;Giorgos Kappes </h1>
+			<div class="nav">
+				<ul>
+					<li class="first"><a href="#profile" class="smoothScroll">Profile </a></li>
+					<li><a href="#research" class="smoothScroll"> Research </a></li>
+					<li><a href="#publications" class="smoothScroll"> Publications </a></li>
+					<li><a href="#memberships" class="smoothScroll"> Memberships </a></li>						
+					<li><a href="#tutorials" class="smoothScroll"> Tutorials </a></li>
+					<li><a href="#contact" class="smoothScroll"> Contact </a></li>
+				</ul>
 			</div>
-			<div class="section_header">
-				<div class="logo_container">
-					<div class="logo_image">
-					</div>
-					<div class="logo_image_second">
-						<h1 class="profile"> Giorgos Kappes </h1>
-						<h2 class="profile"> PhD Candidate </h2>
-						<hr class="profile"/>
-						<h3 class="profile"> Systems Research Group (SRG), Department of Computer Science
-									and Engineering</h3>
-						<h3 class="profile"> University of Ioannina, Greece </h3>			
-					</div>	
-					<div class="logo_image_fourth">
-						<div class="logo_image_third">
-						</div>
-					</div>													
-				</div>
+		</div>
+		<div class="section_header">
+			<div class="logo_container">
+				<div class="logo_image"></div>
+				<div class="logo_image_second">
+					<h1 class="profile"> Giorgos Kappes </h1>
+					<h2 class="profile"> PhD Candidate </h2>
+					<hr class="profile"/>
+					<h3 class="profile"> Systems Research Group (SRG), Department of Computer Science
+								and Engineering</h3>
+					<h3 class="profile"> University of Ioannina, Greece </h3>			
+				</div>	
+				<div class="logo_image_fourth">
+					<div class="logo_image_third"></div>
+				</div>													
 			</div>
 		</div>
 		<!--*************************************************************************************-->
