--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-		<meta name="keywords" content="giorgos, kappes, ioannina, uoi, Γιώργος, Καππές, πληροφορική, computer science, virtualization, ceph, storage, security, os, operating system" />
-		<meta name="description" content="Giorgos Kappes's academic web site"/>
+		<meta name="keywords" content="giorgos, kappes, ioannina, uoi, Γιώργος, Καππές, πληροφορική, computer science, virtualization, ceph, storage, security, os, operating systems" />
+		<meta name="description" content="Giorgos Kappes's personal web site"/>
 		<meta name="author" content="Giorgos Kappes"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="icon" type="image/png" href="images/logo_small.png"/>
@@ -12,12 +12,9 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 	</head>
 	<body>
-		<!--*************************************************************************************-->
 		<!--Header Container-->
-		<!--*************************************************************************************-->	
 		<div class="header">
-			<a class="anchor" id="top"></a>
-			<h1 class="headerlogo"> &nbsp;Giorgos Kappes </h1>
+			<a class="anchor" id="top"></a><h1 class="headerlogo"> &nbsp;Giorgos Kappes </h1>
 			<div class="nav">
 				<ul>
 					<li class="first"><a href="#profile" class="smoothScroll">Profile </a></li>
@@ -40,18 +37,12 @@
 								and Engineering</h3>
 					<h3 class="profile"> University of Ioannina, Greece </h3>			
 				</div>	
-				<div class="logo_image_fourth">
-					<div class="logo_image_third"></div>
-				</div>													
+				<div class="logo_image_fourth"><div class="logo_image_third"></div></div>													
 			</div>
 		</div>
-		<!--*************************************************************************************-->
-		<!--Main Container-->
-		<!--*************************************************************************************-->		
+		<!--Main Container-->	
 		<div class="container_main">
-			<!--*************************************************************************************-->
-			<!--Profile-->
-			<!--*************************************************************************************-->		
+			<!--Profile-->		
 			<div class="section_first"><a class="anchor" id="profile"></a>
 				<div class="row">
 					<div class="row_in">
@@ -78,7 +69,7 @@
 								under the supervision of <a href="http://www.cs.uoi.gr/~stergios">Prof. Stergios Anastasiadis</a>. In
 								our research we examined approaches for efficient and effective support of multitenancy in filesystems
 								used by virtual machines. The title of my MSc thesis was “Scalable Access Control for Secure 
-								Multi-Tenant Filesystems”. <br /> 	  
+								Multi-Tenant Filesystems”.<br /> 	  
 							</p>
 						</div>
 						<div class="col_r">
@@ -86,34 +77,22 @@
 								Currently, I am a PhD candidate at the same department and a member of Systems Research Group 
 								(SRG). <br /> 
 								My main research interests include some hot topics of computer systems, as: Virtualization, 
-								File and Storage Systems, and Security of Computer Systems. <br />
+								File and Storage Systems, and Security of Computer Systems.<br />
 								For more information about me, you can find my curriculum vitae here: <a href = "files/cv_gr.pdf">in 
-								Greek</a>, <a href = "files/cv_en.pdf">in English</a>. <br /> 
+								Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /> 
 							</p>
 							<p class="small_text" style="text-align:right">
-								<a href="https://github.com/geokapp">
-									<img src="images/github.png"  alt="Github"/>
-								</a>
-								<a href="https://www.linkedin.com/profile/view?id=96937605">
-									<img src="images/linkedin.png" alt="Linkedin"/>
-								</a>
-								<a href="https://twitter.com/geokapp">
-									<img src="images/twitter.png" alt="Twitter"/>
-								</a>
-								<a href="https://plus.google.com/u/0/+GiorgosKappes">
-									<img src="images/gplus.png" alt="Google+"/>
-								</a>
-								<a href="https://www.facebook.com/giorgos.kappes">
-									<img src="images/facebook.png" alt="Facebook"/>
-								</a>
+								<a href="https://github.com/geokapp"><img src="images/github.png"  alt="Github"/></a>
+								<a href="https://www.linkedin.com/profile/view?id=96937605"><img src="images/linkedin.png" alt="Linkedin"/></a>
+								<a href="https://twitter.com/geokapp"><img src="images/twitter.png" alt="Twitter"/></a>
+								<a href="https://plus.google.com/u/0/+GiorgosKappes"><img src="images/gplus.png" alt="Google+"/></a>
+								<a href="https://www.facebook.com/giorgos.kappes"><img src="images/facebook.png" alt="Facebook"/></a>
 							</p>
 						</div>
 					</div>
 				</div>	
 			</div>
-			<!--*************************************************************************************-->
-			<!--Research-->
-			<!--*************************************************************************************-->				
+			<!--Research-->				
 			<div class="section"> <a class="anchor" id="research"></a>
 				<div class="row">
 					<div class="row_in">
@@ -171,9 +150,7 @@
 					</div>
 				</div>	
 			</div>
-			<!--*************************************************************************************-->
-			<!--Publications-->
-			<!--*************************************************************************************-->				
+			<!--Publications-->				
 			<div class="section"> <a class="anchor" id="publications"></a>
 				<div class="row">
 					<div class="row_in">
@@ -225,9 +202,7 @@
 					</div>
 				</div>									
 			</div>
-			<!--*************************************************************************************-->
-			<!--Memberships-->
-			<!--*************************************************************************************-->				
+			<!--Memberships-->				
 			<div class="section"> <a class="anchor" id="memberships"></a>
 				<div class="row">
 					<div class="row_in">
@@ -260,9 +235,7 @@
 					</div>
 				</div>									
 			</div>			
-			<!--*************************************************************************************-->
-			<!--Various-->
-			<!--*************************************************************************************-->			
+			<!--Various-->		
 			<div class="section"> <a class="anchor" id="tutorials"></a>
 				<div class="row">
 					<div class="row_in">
@@ -388,9 +361,7 @@
 					</div>
 				</div>	
 			</div>
-			<!--*************************************************************************************-->
-			<!--Contact-->
-			<!--*************************************************************************************-->				
+			<!--Contact-->				
 			<div class="section"> <a class="anchor" id="contact"></a>
 				<div class="row">
 					<div class="row_in">
@@ -426,36 +397,22 @@
 				</div>									
 			</div>
 			<div class="cleared"></div>
-			<!--*************************************************************************************-->
 			<!--Footer-->
-			<!--*************************************************************************************-->
-			</div>
-			<div class="container_logo">
-			<div class="footer">
-				<p class="tiny_text"> 
-				  Copyright &copy; 2013-2015 Giorgos Kappes. <br />
-				  Powered by <a class="footer_link" href="https://pages.github.com/">GitHub Pages</a><br />
-					<script type="text/javascript">
-						document.write("This page was last modified on: " + document.lastModified +" UTC+2");
-					</script>
-					<br /><br />
-					<a href="http://validator.w3.org/check?uri=referer">
-						<img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0!" height="31" width="88" />
-					</a>
-					<a href="http://jigsaw.w3.org/css-validator/check/referer">
-						<img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" />
-					</a>
-			
-					<a href="http://statcounter.com">
-						<img src="images/t.png" alt="Stat Counter" />
-					</a>
-				</p>
-			</div>
-		</div>		
-		<!--*************************************************************************************-->
-		<!--Page Scripts -->
-		<!--*************************************************************************************-->
-		<!-- Start of StatCounter Code -->
+		</div>
+		<div class="footer">
+			<p class="tiny_text"> 
+			  Copyright &copy; 2013-Today Giorgos Kappes. <br />
+			  Powered by <a class="footer_link" href="https://pages.github.com/">GitHub Pages</a><br />
+				<script type="text/javascript">
+					document.write("This page was last modified on: " + document.lastModified +" UTC+2");
+				</script>
+				<br /><br />
+				<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" /></a>
+				<a href="http://statcounter.com"><img src="images/t.png" alt="Stat Counter" /></a>
+			</p>
+		</div>				
+		<!-- StatCounter -->
 		<script type="text/javascript">
 			var sc_project=7252688; 
 			var sc_invisible=1; 
@@ -472,21 +429,17 @@
 			src="http://c.statcounter.com/7252688/0/fa35d55f/1/"
 			alt="statistics in vBulletin" /></a></div>
 		</noscript>
-		<!-- End of StatCounter Code --> 
-		<!-- Start of Google Analytics Code -->
+		<!-- Google Analytics -->
 		<script type="text/javascript">
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 				 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
 			ga('create', 'UA-63128166-1', 'auto');
 			ga('send', 'pageview');
 		</script>
-		<!-- End of Google Analytics Code -->
-		<!-- Start of smooth scrolling scripts --> 
+		<!-- Smooth scrolling --> 
 		<script type="text/javascript" src="javascript/jquery.min.js"></script>		
 		<script type="text/javascript" src= "javascript/smoothscroll.js"></script>
-		<!-- End of smooth scrolling scripts -->
 	</body>
 </html>
