Removed social links.

--- a/index.html
+++ b/index.html
@@ -80,13 +80,8 @@
 								File and Storage Systems, and Security of Computer Systems.<br />
 								For more information about me, you can find my curriculum vitae here: <a href = "files/cv_gr.pdf">in 
 								Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /> 
-							</p>
-							<p class="small_text" style="text-align:right">
-								<a href="https://github.com/geokapp"><img src="images/github.png"  alt="Github"/></a>
-								<a href="https://www.linkedin.com/profile/view?id=96937605"><img src="images/linkedin.png" alt="Linkedin"/></a>
-								<a href="https://twitter.com/geokapp"><img src="images/twitter.png" alt="Twitter"/></a>
-								<a href="https://plus.google.com/u/0/+GiorgosKappes"><img src="images/gplus.png" alt="Google+"/></a>
-								<a href="https://www.facebook.com/giorgos.kappes"><img src="images/facebook.png" alt="Facebook"/></a>
+								You can also check my <a href = "https://github.com/geokapp">github profile</a> page for a 
+								list of open source projects that I've contributed on. 
 							</p>
 						</div>
 					</div>
