Removed social links.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								My main research interests include some hot topics of computer systems, as: Virtualization, 
 								File and Storage Systems, and Security of Computer Systems.<br />
 								For more information about me, you can find my curriculum vitae here: <a href = "files/cv_gr.pdf">in 
-								Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /> 
+								Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /><br /> 
 								You can also check my <a href = "https://github.com/geokapp">github profile</a> page for a 
 								list of open source projects that I've contributed on. 
 							</p>
