--- a/index.html
+++ b/index.html
@@ -402,9 +402,8 @@
 					document.write("This page was last modified on: " + document.lastModified +" UTC+2");
 				</script>
 				<br /><br />
-				<a href="http://validator.w3.org/check?uri=referer"><img src="images/html.png" alt="Valid XHTML 1.0!" class="footer-img"/></a>
-				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.png" alt="Valid CSS!" class="footer-img" /></a>
-				<a href="http://statcounter.com"><img src="images/statcounter.png" alt="Stat Counter" class="footer-img"/></a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="images/html.png" alt="Valid XHTML 1.0!"/></a>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" /></a>
 			</p>
 		</div>				
 		<!-- StatCounter -->
