--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
 					document.write("This page was last modified on: " + document.lastModified +" UTC+2");
 				</script>
 				<br /><br />
-				<a href="http://validator.w3.org/check?uri=referer"><img src="images/html.png" alt="Valid XHTML 1.0!"/></a>
-				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" /></a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0!"/></a>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a>
 			</p>
 		</div>				
 		<!-- StatCounter -->
