--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 		</div>
 		<div class="footer">
 			<p class="tiny_text"> 
-			  Copyright &copy; 2013-Today Giorgos Kappes. <br />
+			  &copy; 2013-2015 Giorgos Kappes. <br />
 			  Powered by <a class="footer_link" href="https://pages.github.com/">GitHub Pages</a><br />
 				<script type="text/javascript">
 					document.write("This page was last modified on: " + document.lastModified +" UTC+2");
