--- a/index.html
+++ b/index.html
@@ -13,32 +13,24 @@
 	</head>
 	<body>
 		<!--Header Container-->
-		<div class="header">
-			<a class="anchor" id="top"></a><h1 class="headerlogo"> &nbsp;Giorgos Kappes </h1>
-			<div class="nav">
+		<div class="header">													
+			<div class="profile_container">
+				<div class="profile_image"></div>
+				<div class="profile_text">
+					<h1 class="headertext"> Giorgos Kappes </h1>
+					<h1 class="subheadertext"> PhD Candidate at Systems Research Group, UOI </h1>
+				</div>
+			</div>
+			<div class="nav" id="nav">
 				<ul>
-					<li class="first"><a href="#profile" class="smoothScroll">Profile </a></li>
+					<li><a href="#profile" class="smoothScroll">Profile </a></li>
 					<li><a href="#research" class="smoothScroll"> Research </a></li>
 					<li><a href="#publications" class="smoothScroll"> Publications </a></li>
 					<li><a href="#memberships" class="smoothScroll"> Memberships </a></li>						
 					<li><a href="#tutorials" class="smoothScroll"> Tutorials </a></li>
 					<li><a href="#contact" class="smoothScroll"> Contact </a></li>
 				</ul>
-			</div>
-		</div>
-		<div class="section_header">
-			<div class="logo_container">
-				<div class="logo_image"></div>
-				<div class="logo_image_second">
-					<h1 class="profile"> Giorgos Kappes </h1>
-					<h2 class="profile"> PhD Candidate </h2>
-					<hr />
-					<h3 class="profile"> Systems Research Group (SRG), Department of Computer Science
-								and Engineering</h3>
-					<h3 class="profile"> University of Ioannina, Greece </h3>			
-				</div>	
-				<div class="logo_image_fourth"><div class="logo_image_third"></div></div>													
-			</div>
+			</div>				
 		</div>
 		<!--Main Container-->	
 		<div class="container_main">
@@ -396,7 +388,7 @@
 		</div>
 		<div class="footer">
 			<p class="tiny_text"> 
-			  &copy; 2013-2015 Giorgos Kappes. <br />
+			  &copy; 2013-2015 Giorgos Kappes <br />
 			  Powered by <a class="footer_link" href="https://pages.github.com/">GitHub Pages</a><br />
 				<script type="text/javascript">
 					document.write("This page was last modified on: " + document.lastModified +" UTC+2");
@@ -405,7 +397,8 @@
 				<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0!"/></a>
 				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a>
 			</p>
-		</div>				
+		</div>	
+			
 		<!-- StatCounter -->
 		<script type="text/javascript">
 			var sc_project=7252688; 
@@ -435,5 +428,6 @@
 		<!-- Smooth scrolling --> 
 		<script type="text/javascript" src="javascript/jquery.min.js"></script>		
 		<script type="text/javascript" src= "javascript/smoothscroll.js"></script>
-	</body>
+		<script type="text/javascript" src="javascript/fixnav.js"></script>		
+	</body>	
 </html>
