--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-		<meta name="keywords" content="giorgos, kappes, ioannina, uoi, Γιώργος, Καππές, πληροφορική, computer science, virtualization, ceph, storage, security, os, operating systems" />
+		<meta name="keywords" content="giorgos, kappes, ioannina, uoi, Γιώργος, Καππές, πληροφορική, computer science, virtualization, storage, security, os, operating systems" />
 		<meta name="description" content="Giorgos Kappes's personal web site"/>
 		<meta name="author" content="Giorgos Kappes"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
@@ -12,7 +12,6 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 	</head>
 	<body>
-		<!--Header Container-->
 		<div class="header">													
 			<div class="profile_container">
 				<div class="profile_image"></div>
@@ -31,10 +30,8 @@
 					<li><a href="#contact" class="smoothScroll"> Contact </a></li>
 				</ul>
 			</div>				
-		</div>
-		<!--Main Container-->	
-		<div class="container_main">
-			<!--Profile-->		
+		</div>	
+		<div class="container_main">	
 			<div class="section_first"><a class="anchor" id="profile"></a>
 				<div class="row">
 					<div class="row_in">
@@ -78,8 +75,7 @@
 						</div>
 					</div>
 				</div>	
-			</div>
-			<!--Research-->				
+			</div>			
 			<div class="section"> <a class="anchor" id="research"></a>
 				<div class="row">
 					<div class="row_in">
@@ -136,8 +132,7 @@
 						</div>				
 					</div>
 				</div>	
-			</div>
-			<!--Publications-->				
+			</div>				
 			<div class="section"> <a class="anchor" id="publications"></a>
 				<div class="row">
 					<div class="row_in">
@@ -188,8 +183,7 @@
 						</div>
 					</div>
 				</div>									
-			</div>
-			<!--Memberships-->				
+			</div>				
 			<div class="section"> <a class="anchor" id="memberships"></a>
 				<div class="row">
 					<div class="row_in">
@@ -221,8 +215,7 @@
 						</div>
 					</div>
 				</div>									
-			</div>			
-			<!--Various-->		
+			</div>				
 			<div class="section"> <a class="anchor" id="tutorials"></a>
 				<div class="row">
 					<div class="row_in">
@@ -347,8 +340,7 @@
 						</div>
 					</div>
 				</div>	
-			</div>
-			<!--Contact-->				
+			</div>			
 			<div class="section"> <a class="anchor" id="contact"></a>
 				<div class="row">
 					<div class="row_in">
@@ -378,13 +370,11 @@
 										45110 Ioannina, Greece
 								</dd>
 							</dl>
-		
 						</div>
 					</div>
 				</div>									
 			</div>
 			<div class="cleared"></div>
-			<!--Footer-->
 		</div>
 		<div class="footer">
 			<p class="tiny_text"> 
@@ -397,8 +387,7 @@
 				<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0!"/></a>
 				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a>
 			</p>
-		</div>	
-			
+		</div>				
 		<!-- StatCounter -->
 		<script type="text/javascript">
 			var sc_project=7252688; 
@@ -428,6 +417,7 @@
 		<!-- Smooth scrolling --> 
 		<script type="text/javascript" src="javascript/jquery.min.js"></script>		
 		<script type="text/javascript" src= "javascript/smoothscroll.js"></script>
+		<!-- Fixed nav bar --> 
 		<script type="text/javascript" src="javascript/fixnav.js"></script>		
 	</body>	
 </html>
