--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					<li><a href="#memberships" class="smoothScroll"> Memberships </a></li>						
 					<li><a href="#tutorials" class="smoothScroll"> Tutorials </a></li>
 					<li><a href="#contact" class="smoothScroll"> Contact </a></li>
+					<li><a href="http://giorgoskappes.com/blog/"> Blog </a></li>
 				</ul>
 			</div>				
 		</div>	
@@ -349,14 +350,45 @@
 							<h3> Contact Me </h3> 
 								<p class="medium_text"> 
 									Most likely you will find me at A34 office in the first floor of the department. 
-									If not, below is more information on how you can reach me:
+									If not, below is more information on how you can reach me.
 								</p>
 						</div>
 						<div class="col_c">
+							<p class="small_text">
+								I use <a href="https://gnupg.org/">GnuPG</a> for email encryption and signing. I also use it 
+								to sign digital content that I create (such as code, documents, and my web pages). <br />
+								I own a Master Signing Key 
+								(<a href="files/keys/gkappes-master-signing-key-public.asc">key</a>, 
+								<a href="files/keys/gkappes-master-signing-key-fingerprint.asc"> fingerprint</a>)
+								which is the root of my personal
+								chain of trust. I use a separate Email Key for each email address that I own. You can find these keys 
+								below, next to my email addresses. I also use a separate Signing Key
+								(<a href="files/keys/gkappes-signing-key-public.asc">key</a>,
+								<a href="files/keys/gkappes-signing-key-fingerprint.asc"> fingerprint</a>)
+								for signing various things. All keys are signed by my Master Signing Key. <br />
+								In case you would like to send me a confidential email, please use the appropriate PGP/GPG key to secure it. 
+								Additionally, please sign the email with your signing key and provide me with your public key, so that I 
+								can verify your signature.
+							</p>
+						</div>					
+						<div class="col_c">
 							<dl class="small_text" id="email">
 								<dt> EMAIL </dt>
-								<dd> <a href="mailto:contact@giorgoskappes.com">contact (at) giorgoskappes.com</a> </dd>
-								<dd> <a href="mailto:gkappes@cs.uoi.gr">gkappes (at) cs.uoi.gr</a> </dd>
+								<dd> 
+									<a href="mailto:contact@giorgoskappes.com">contact (at) giorgoskappes.com</a><br /> 
+									(<a href="files/keys/gkappes-gkc-email-key-public.asc">key</a>, 
+									<a href="files/keys/gkappes-gkc-email-key-fingerprint.asc"> fingerprint</a>)
+								</dd>
+								<dd> 
+									<a href="mailto:gkappes@cs.uoi.gr">gkappes (at) cs.uoi.gr</a><br />
+									(<a href="files/keys/gkappes-uoi-email-key-public.asc">key</a>, 
+									<a href="files/keys/gkappes-uoi-email-key-fingerprint.asc"> fingerprint</a>)									
+								</dd>
+								<dd> 
+									<a href="mailto:geokapp@gmail.com">geokapp (at) gmail.com</a><br />
+									(<a href="files/keys/gkappes-gmail-email-key-public.asc">key</a>, 
+									<a href="files/keys/gkappes-gmail-email-key-fingerprint.asc"> fingerprint</a>)									
+								</dd>								
 							</dl>
 							<dl class="small_text" id="phone" >
 								<dt> PHONE </dt>
