Removed link to blog

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<li><a href="#memberships" class="smoothScroll"> Memberships </a></li>						
 					<li><a href="#tutorials" class="smoothScroll"> Tutorials </a></li>
 					<li><a href="#contact" class="smoothScroll"> Contact </a></li>
-					<li><a href="http://giorgoskappes.com/blog/"> Blog </a></li>
+					<!-- <li><a href="http://giorgoskappes.com/blog/"> Blog </a></li> -->
 				</ul>
 			</div>				
 		</div>	
@@ -366,7 +366,7 @@
 								(<a href="files/keys/gkappes-signing-key-public.asc">key</a>,
 								<a href="files/keys/gkappes-signing-key-fingerprint.asc"> fingerprint</a>)
 								for signing various things. All keys are signed by my Master Signing Key. <br />
-								In case you would like to send me a confidential email, please use the appropriate PGP/GPG key to secure it. 
+								So, in case you would like to send me a confidential email, please use the appropriate PGP/GPG key to secure it. 
 								Additionally, please sign the email with your signing key and provide me with your public key, so that I 
 								can verify your signature.
 							</p>
