--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="profile_container">
 				<div class="profile_image"></div>
 				<div class="profile_text">
-					<h1 class="headertext"> Giorgos Kappes </h1>
+					<a class="anchor" id="top"></a><h1 class="headertext"> Giorgos Kappes </h1>
 					<h1 class="subheadertext"> PhD Candidate at Systems Research Group, UOI </h1>
 				</div>
 			</div>
