Changed cotnact info.

--- a/index.html
+++ b/index.html
@@ -356,17 +356,14 @@
 						<div class="col_c">
 							<p class="small_text">
 								I use <a href="https://gnupg.org/">GnuPG</a> for email encryption and signing. I also use it 
-								to sign digital content that I create (such as code, documents, and my web pages). <br />
-								I own a Master Signing Key 
-								(<a href="files/keys/gkappes-master-signing-key-public.asc">key</a>, 
-								<a href="files/keys/gkappes-master-signing-key-fingerprint.asc"> fingerprint</a>)
-								which is the root of my personal
-								chain of trust. I use a separate Email Key for each email address that I own. You can find these keys 
-								below, next to my email addresses. I also use a separate Signing Key
-								(<a href="files/keys/gkappes-signing-key-public.asc">key</a>,
-								<a href="files/keys/gkappes-signing-key-fingerprint.asc"> fingerprint</a>)
-								for signing various things. All keys are signed by my Master Signing Key. <br />
-								So, in case you would like to send me a confidential email, please use the appropriate PGP/GPG key to secure it. 
+								to sign digital content that I create (such as code, documents, and my web pages).
+								The short ID of my personal GPG key is 88507AE1. You can find the key on the 
+								<a href="https://pgp.mit.edu/pks/lookup?op=vindex&search=0xD614E92E88507AE1">MIT PGP Public Key Server</a>
+								and here: 
+								<a href="files/keys/gkappes-public.gpg">pubring</a>, 
+								<a href="files/keys/gkappes-public.asc">public key</a>, 
+								<a href="files/keys/gkappes-public-fingerprint.asc">fingerprint</a>. <br />
+								In case you would like to send me a confidential email, please use my key to secure it. 
 								Additionally, please sign the email with your signing key and provide me with your public key, so that I 
 								can verify your signature.
 							</p>
@@ -375,19 +372,13 @@
 							<dl class="small_text" id="email">
 								<dt> EMAIL </dt>
 								<dd> 
-									<a href="mailto:contact@giorgoskappes.com">contact (at) giorgoskappes.com</a><br /> 
-									(<a href="files/keys/gkappes-gkc-email-key-public.asc">key</a>, 
-									<a href="files/keys/gkappes-gkc-email-key-fingerprint.asc"> fingerprint</a>)
+									<a href="mailto:contact@giorgoskappes.com">giorgos (at) giorgoskappes.com</a><br /> 
 								</dd>
 								<dd> 
-									<a href="mailto:gkappes@cs.uoi.gr">gkappes (at) cs.uoi.gr</a><br />
-									(<a href="files/keys/gkappes-uoi-email-key-public.asc">key</a>, 
-									<a href="files/keys/gkappes-uoi-email-key-fingerprint.asc"> fingerprint</a>)									
+									<a href="mailto:gkappes@cs.uoi.gr">gkappes (at) cs.uoi.gr</a><br />							
 								</dd>
 								<dd> 
-									<a href="mailto:geokapp@gmail.com">geokapp (at) gmail.com</a><br />
-									(<a href="files/keys/gkappes-gmail-email-key-public.asc">key</a>, 
-									<a href="files/keys/gkappes-gmail-email-key-fingerprint.asc"> fingerprint</a>)									
+									<a href="mailto:geokapp@gmail.com">geokapp (at) gmail.com</a><br />								
 								</dd>								
 							</dl>
 							<dl class="small_text" id="phone" >
