--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 								I use <a href="https://gnupg.org/">GnuPG</a> for email encryption and signing. I also use it 
 								to sign digital content that I create (such as code, documents, and my web pages).
 								The short ID of my personal GPG key is 88507AE1. You can find the key on the 
-								<a href="https://pgp.mit.edu/pks/lookup?op=vindex&search=0xD614E92E88507AE1">MIT PGP Public Key Server</a>
+								<a href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0xD614E92E88507AE1">MIT PGP Public Key Server</a>
 								and here: 
 								<a href="files/keys/gkappes-public.gpg">pubring</a>, 
 								<a href="files/keys/gkappes-public.asc">public key</a>, 
