--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 				<ul>
 					<li><a href="#profile" class="smoothScroll">Profile </a></li>
 					<li><a href="#research" class="smoothScroll"> Research </a></li>
-					<li><a href="#publications" class="smoothScroll"> Publications </a></li>
-					<li><a href="#memberships" class="smoothScroll"> Memberships </a></li>						
+					<li><a href="#publications" class="smoothScroll"> Publications </a></li>					
 					<li><a href="#tutorials" class="smoothScroll"> Tutorials </a></li>
 					<li><a href="#contact" class="smoothScroll"> Contact </a></li>
 					<!-- <li><a href="http://giorgoskappes.com/blog/"> Blog </a></li> -->
@@ -128,7 +127,8 @@
 								My assigned task was the design of storage models for climate-change data. In particular, 
 								the determination of models for storing and processing scientific data on multicore systems 
 								and virtual machines. I also contributed on the deployment and setup of the platform's infrasturcture.
-								(<a href="https://www.ofidia.eu">Project website</a>)<br />
+								(<a href="https://www.ofidia.eu">Project website</a>,
+								<a href="http://ofidia.physics.uoi.gr/">public version of Online Precision Weather Forecast for N.W. Greece</a>)<br />
 							</p>
 						</div>				
 					</div>
@@ -184,39 +184,7 @@
 						</div>
 					</div>
 				</div>									
-			</div>				
-			<div class="section"> <a class="anchor" id="memberships"></a>
-				<div class="row">
-					<div class="row_in">
-						<div class="col_c">
-							<div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
-							<h3> Memberships </h3> 
-								<p class="medium_text"> 
-									Following is a list of organizations that I am or have been a member of:
-								</p>
-						</div>
-						<div class="col_c">
-                                                                <ul class="small_text">
-									<li> 
-										<a href="https://www.ieee.org">IEEE</a>, Institute of Electrical and Electronics
-										Engineers.<br />
-										Student member since 2015. 
-                                                                        </li>
-                                                                        <li> 
-										<a href="https://www.usenix.org/">EuroSys</a>, the European Professional Society on
-										Computer Systems.<br />
-										Student member since 2013. 
-                                                                        </li>									
-                                                                        <li> 
-										<a href="https://www.usenix.org/">Usenix</a>, the Advanced Computing Systems
-										Association.<br />
-										Student member since 2012. 
-                                                                        </li>										
-                                                                </ul>
-						</div>
-					</div>
-				</div>									
-			</div>				
+			</div>						
 			<div class="section"> <a class="anchor" id="tutorials"></a>
 				<div class="row">
 					<div class="row_in">
