--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
 								Pelase note that I have recently transitioned from an old GPG key 
 								(<a href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0x48D4F773F47D5746">F47D5746</a>). You
 								can find the transition statement
-								<a href="files/keys/gpg.transition.txt">here</a>. It is signed by both my
-								<a href="files/keys/gpg.transition.txt.F47D5746.sig">old</a> and
-								<a href="files/keys/gpg.transition.txt.88507AE1.sig">new</a> keys to validate the transition.<br /> 
+								<a href="files/keys/gpg-transition.txt">here</a>. It is signed by both my
+								<a href="files/keys/gpg-transition.txt.F47D5746.sig">old</a> and
+								<a href="files/keys/gpg-transition.txt.88507AE1.sig">new</a> keys to validate the transition.<br /> 
 								In case you would like to send me a confidential email, please use my key to secure it. 
 								Additionally, please sign the email with your signing key and provide me with your public key, so that I 
 								can verify your signature.
