--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
 						<div class="col_l">
 							<p class="small_text">
 								I am Giorgos E. Kappes and I was born in <a href="http://www.ioannina.gr/">Ioannina, Greece</a> in 
-								1987. I graduated the  <a href="http://2lykioannina.gr/">2nd High School of Ioannina </a>in 2004 and
-								obtained my BSc degree from <a href="http://http://www.cs.uoi.gr/">the Department 
-								of Computer Science</a>, of the <a href="http://www.uoi.gr/">University of Ioannina </a> in 2011. <br />
+								1987. I obtained my BSc degree from <a href="http://http://www.cse.uoi.gr/">the Department
+							        of Computer Science & Engineering</a> (former Computer Science), of the
+								<a href="http://www.uoi.gr/">University of Ioannina </a> in 2011.
 								During my undergraduate studies, I gained basic knowledge in building high performance 
-								systems, software and Internet services, as well as in evaluating and improving existing 
-								ones. Furthermore, I had the opportunity to work on a thesis entitled “Logging file access 
+								systems, software and Internet services, as well as in evaluating and improving the performance of
+								existing systems. Furthermore, I had the opportunity to work on a thesis entitled “Logging file access 
 								patterns for a more efficient file search on file systems” which helped me to deepen my 
-								knowledge in the fields of information retrieval and file and storage systems. I completed 
-								my MSc in the <a href="http://srg.cs.uoi.gr/">Systems Research Group (SRG) </a>of the same department
+								knowledge in the fields of information retrieval, file and storage systems, and MS Windows driver development.<br />
+								I completed my MSc in the <a href="http://srg.cs.uoi.gr/">Systems Research Group (SRG) </a>of the same department
 								under the supervision of <a href="http://www.cs.uoi.gr/~stergios">Prof. Stergios Anastasiadis</a>. In
 								our research we examined approaches for efficient and effective support of multitenancy in filesystems
 								used by virtual machines. The title of my MSc thesis was “Scalable Access Control for Secure 
@@ -65,8 +65,7 @@
 							<p class="small_text">
 								Currently, I am a PhD candidate at the same department and a member of Systems Research Group 
 								(SRG). <br /> 
-								My main research interests include some hot topics of computer systems, as: Virtualization, 
-								File and Storage Systems, and Security of Computer Systems.<br />
+								My main research interests include Operating Systems, Data Storage, and Systems Security. <br />
 								For more information about me, you can find my curriculum vitae here: <a href = "files/cv_gr.pdf">in 
 								Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /><br /> 
 								You can also check my <a href = "https://github.com/geokapp">github profile</a> page for a 
