--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<p class="small_text">
 								I am Giorgos E. Kappes and I was born in <a href="http://www.ioannina.gr/">Ioannina, Greece</a> in 
 								1987. I obtained my BSc degree from <a href="http://http://www.cse.uoi.gr/">the Department
-							        of Computer Science & Engineering</a> (former Computer Science), of the
+							        of Computer Science &amp; Engineering</a> (former Computer Science), of the
 								<a href="http://www.uoi.gr/">University of Ioannina </a> in 2011.
 								During my undergraduate studies, I gained basic knowledge in building high performance 
 								systems, software and Internet services, as well as in evaluating and improving the performance of
