--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="col_l">
 							<p class="small_text">
 								I am Giorgos E. Kappes and I was born in <a href="http://www.ioannina.gr/">Ioannina, Greece</a> in 
-								1987. I obtained my BSc degree from <a href="http://http://www.cse.uoi.gr/">the Department
+								1987. I obtained my BSc degree from <a href="http://www.cse.uoi.gr/">the Department
 							        of Computer Science &amp; Engineering</a> (former Computer Science), of the
 								<a href="http://www.uoi.gr/">University of Ioannina </a> in 2011.
 								During my undergraduate studies, I gained basic knowledge in building high performance 
